	* src/term_api.h src/misc.c src/misc.h src/save.c src/save.h:
	Parse and save dashtype specification in the form of "-_. " or 
	"(1.0, 0.3, 1.5, 2.0)". In the latter form alternating numbers 
	specify dash lengths and spaces between them.

	* src/gadgets.c src/gadgets.h:
	Added new type custom_dashtype_def and global variable 
	first_custom_dashtype in preparation of new "set dashtype" command.

2014-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/gadgets.c src/gadgets.h src/graphics.c
	src/misc.c src/plot2d.c src/set.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:
	New point type that consists of a single character (possibly a
	multibyte character).  This is particularly useful as
	    plot $FOO with linespoints pointtype "#" pointinterval -1
	where # is the desired character drawn at each point.

2014-03-16  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/term_api.h src/term.c src/misc.c src/plot2d.c src/plot2d.c
	src/set.c src/save.c src/graphics.c src/gadgets.c src/gadgets.h:
	Introduce new "dashtype" line property that controls dot/dash 
	pattern independently. Allow it in "set|show linetype|linestyle",
	"plot", etc., display it in "save".
	Only numeric "dashtype N" supported for now. 
	New function dashtype() added to termentry struct, but none of the
	terminals use it yet.

	* src/set.c (set_linestyle): Set pm3d_color.type to TC_LT and
	pm3d_color.lt to line number by default. This is necessary because
	since the use_palette flag was removed, pm3d_color information is
	used everywhere, yet, it was not set properly. This resulted,
	among others, a broken "show linetype" output with empty "linecolor"
	spec.

2014-03-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.h (en_minitics_status): Give enum a typedef name, too.
	(axis): Use new type for element of AXIS struct, instead of int.

	* src/axis.c (gen_tics): Simplify by using local OO-like "this"