@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.86 2013/12/17 00:49:53 sfeam Exp $
+ * $Id: tables.h,v 1.87 2013/12/26 17:58:29 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -75,7 +75,8 @@ enum save_id { SAVE_INVALID, SAVE_FUNCS, SAVE_TERMINAL, SAVE_SET, SAVE_VARS };
 enum set_id {
     S_INVALID,
     S_ACTIONTABLE, S_ALL, S_ANGLES, S_ARROW, S_AUTOSCALE, S_BARS, S_BIND, S_BORDER,
-    S_BOXWIDTH, S_CLABEL, S_CLIP, S_CNTRPARAM, S_CNTRLABEL, S_CONTOUR, S_DATA, S_DATAFILE,
+    S_BOXWIDTH, S_CLABEL, S_CLIP, S_CNTRPARAM, S_CNTRLABEL, S_CONTOUR, 
+    S_DASHTYPE, S_DATA, S_DATAFILE,
     S_FUNCTIONS, S_DGRID3D, S_DUMMY, S_ENCODING, S_DECIMALSIGN, S_FIT,
     S_FONTPATH, S_FORMAT,
     S_GRID, S_HIDDEN3D, S_HISTORY, S_HISTORYSIZE, S_ISOSAMPLES, S_KEY,
