@@ -9,6 +9,11 @@
 	Added new type custom_dashtype_def and global variable 
 	first_custom_dashtype in preparation of new "set dashtype" command.
 
+	* src/gadgets.h src/misc.c src/set.c src/setshow.h src/show.c
+	src/tables.c src/tables.h src/term_api.h src/unset.c:
+	New commands 'set|show|unset dashtype <N> <dashtype_spec>' to
+	specify permanent, user-defined dashtypes.
+
 2014-03-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c src/axis.h src/gadgets.c src/gadgets.h src/graphics.c
